--- a/developer_tools.Rmd
+++ b/developer_tools.Rmd
@@ -1,6 +1,6 @@
 # Developer tools
 
-This chapter lists resources and tools which developers may use. Here we will go over some commonly used tools that are relevant to R’s workflow. As there are several ways to accomplish these tasks, this chapter reflects methods suitable for new contributors. Experienced contributors may desire a different approach.
+This chapter lists resources and tools which R developers may use. Here we will go over some commonly used tools that are relevant to R’s workflow. As there are several ways to accomplish these tasks, this chapter reflects methods suitable for new contributors. Experienced contributors may desire a different approach.
 
 ## Subversion (svn) client
 
