--- a/07-documenting_R.Rmd
+++ b/07-documenting_R.Rmd
@@ -10,11 +10,11 @@ R’s documentation has long been considered to be good for a free programming l
 
 The involvement of the community takes many forms, from authoring to bug reports to raising an issue when the documentation could be more complete or easier to use.
 
-This chapter is aimed at authors and potential authors of documentation for R. More specifically, it is for people contributing to the standard documentation and developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify existing documentation or provide documentation that is missing, your contribution will be welcome and highly appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out.
+This chapter is aimed at authors and potential authors of documentation for R. More specifically, it is for people contributing to the standard documentation and developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify existing documentation or provide documentation that is missing, your contribution is welcome and appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to to change or extend the documentation will be accepted - sometimes the patch contribution might be incorrect, other times, while a change in wording may make some things clearer, other finer details of the corner cases or the like may be less clear, leading to the patch being declined or modified by the R-core member reviewing it before applying it (if they agree the issue is important enough to fix).
 
 ## Guidelines for writing the system help files (in .Rd format)
 
-Following are the suggested guidelines while creating the system help files in the .Rd format. These are intended for writing the core documentations but may also be useful for package writers. (share documentation of a simple base function here?)
+Following are the suggested guidelines while creating the system help files in the .Rd format. A example of the .Rd format is available for [mean.Rd](https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd). These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found [here](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files).
 
 There are three main parts of an .Rd file:
 
@@ -45,7 +45,7 @@ All the above information is included in a .Rd file within a series of sections 
     * The examples should not require special facilities (for instance, Internet access or write permission to specific directories).
     * Examples should also not take longer than necessary to run, as they are run when checking a build of R.
     
-3. `\synopsis` section: The `\usage` section can have the function definition, or the actual definition can be included in the `\synopsis` section.
+3. `\synopsis` section: The `\usage` section can have the function definition, or the actual definition can be included in the `\synopsis` section. The full documentation for [\usage](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Documenting-functions) says that the usage information specified should match the function definition exactly. Apparently, `\synopsis` was removed in [R 3.1.0](https://github.com/r-devel/r-svn/blob/0d65935f30dcaccfeee1dd61991bf4b1444873bc/src/library/tools/R/RdConv2.R#L918-L919), but it is still mentioned in [Rds](https://developer.r-project.org/Rds.html). 
 
 4. `\source` and `\references` sections:
     * Author(s) names should be written in the form `Author, A. B.`.
@@ -70,9 +70,7 @@ The language used in the documentations should follow these basic rules:
 
 4. Giving a code equivalent (or approximate equivalent) can be a useful in addition to the description provided. You should carefully weigh whether the code equivalent adds value to the document.
 
-5. The tone of the documentation needs to be respectful of the reader’s background. Lay out the relevant information, show motivating use cases, provide glossary links, and do your best to connect-the-dots. The documentation is meant for newcomers, many of whom will be using it to evaluate the R language as a whole. The experience needs to be positive and not leave the reader with worries that something bad will happen if they make a mistake. 
-
-Extensive details of writing R documentation files can be found [here](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files).
+5. The tone of the documentation needs to be respectful of the reader’s background. Lay out the relevant information, show motivating use cases, and do your best to connect-the-dots. The documentation is meant for newcomers, many of whom will be using it to evaluate the R language as a whole. The experience needs to be positive and not leave the reader with worries that something bad will happen if they make a mistake. 
 
 ## Helping with documentation
 
@@ -80,7 +78,7 @@ Maintaining the accuracy  of R's documentations and keeping a high level of qual
 
 Looking at pre-existing documentation source files can be very helpful when getting started.
 
-If you look at documentation issues on Bugzilla, you will find various documentation problems that may need work. Issues vary from typos to unclear documentation and items lacking documentation.
+If you look at documentation issues on Bugzilla, you will find various documentation problems that may need work. Since "Documentation" is one of the possible components you can set in the metadata, you can browse by this [component](https://bugs.r-project.org/bugzilla/buglist.cgi?component=Documentation) to find the documentation bugs on Bugzilla. Issues vary from typos to unclear documentation and items lacking documentation.
 
 If you see a documentation issue that you would like to tackle, you can leave a comment on the issue saying you are going to try to solve the issue and mention roughly how long you think you will take to do so (this allows others to take on the issue if you happen to forget or lose interest).
 
@@ -98,6 +96,8 @@ Our dev guide workflow uses continuous integration and deployment so changes to 
 
 ## Instructions for reporting the CRAN policy bugs -- discussion in slack (random channel)
 
+If you find some typo or problem on [CRAN](https://cran.r-project.org) after checking the problem or typo you can write a polite email to `cran-sysadmin@r-project.org` and one of the R-core members working with CRAN. You'll probably get a prompt reply about how the issue is going to be fixed.
+
 **Note**:
 
 There is a `#core-documentation` channel on the [R Contributors slack](https://r-contributors.slack.com/) where you can discuss about the patches for improvements to R's documentation. 
@@ -105,3 +105,5 @@ There is a `#core-documentation` channel on the [R Contributors slack](https://r
 ## See also
 
 1. [Writing R documentation files](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files)
+2. [R manuals](https://cran.r-project.org/manuals.html): These are a part of the [R sources](https://github.com/r-devel/r-svn/tree/master/doc/manual). Hence, bug reports/patches can also be submitted via Bugzilla, e.g. https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15221. Note that they are typically referred to by their file names "R-admin", "R-exts" etc. The manuals are written in [Texinfo](https://www.gnu.org/software/texinfo/) (file extension `.texi`). The manual should be referred to for [how to mark up text](https://www.gnu.org/software/texinfo/manual/texinfo/texinfo.html). 
+R-admin contains information on how to [build the manuals](https://cran.r-project.org/doc/manuals/r-release/R-admin.html#Making-the-manuals) - it would be a good idea to check the manuals build if you are providing a patch. But simple suggestions could be made by describing the change or providing suggested `.texi` marked-up text directly, e.g. https://bugs.r-project.org/bugzilla/show_bug.cgi?id=15193.
