--- a/index.Rmd
+++ b/index.Rmd
@@ -3,6 +3,7 @@ title: "R Development Guide"
 author: "R Contribution Working Group"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
+output: bookdown::gitbook
 documentclass: book
 bibliography: [book.bib]
 biblio-style: apalike
@@ -12,10 +13,8 @@ url: 'TDDO'
 description: "A guide to R development."
 ---
 
-# {-}
+# Acknowledgement
 
-Initial chapters of this guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. It draws on documentation and articles written by the R Core Team. 
+Initial chapters of this guide were developed by Saranjeet Kaur Bhogal, in a project funded by the R Foundation, mentored by Heather Turner and Michael Lawrence. It draws on documentation and articles written by the R Core Team. The initial version of the guide was upgraded as a part of the [Google Season of Docs 2022](https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal) project with two Technical Writers and reviewed by the [Steering Committee](https://github.com/rstats-gsod/gsod2022/wiki/GSOD-2022-Proposal#steering-committee).
 
-This guide has benefited from contributions and reviews by the following (names are in alphabetical order):
-
-Bettina Gruen, Carol Willing, Gabriel Becker, Kara Woo, Lluís Revilla Sancho, Maya Gans, Michael Chirico, Mine Cetinkaya-Rundel, Toby Dylan Hocking.
+This guide has benefited and continues to be benefited from varied contributions by several [contributors](https://github.com/r-devel/rdevguide#contributors-). 
