update outline of the chapter

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -2,7 +2,18 @@
 
 This guide is heavily influenced by the [Python Developer Guide](https://devguide.python.org/), and is a comprehensive resource for contributing to R Core – for both new and experienced contributors. It is maintained by the [R Contribution Working Group](/working-group). We welcome your contributions to R Core!
 
-## How to contribute to this guide? {#how-to-contribute-to-this-guide -}
+## Overview of different ways of contributing to the R Project: contributing to bug fixing, contributing to translations, testing R before release
+- cLinks to the rest of the guide
+- Contributing to R tutorial
+- Welcome to Bug BBQ slides
+- README on Bug BBQ repo
+- subsection on Intro to Bugzilla (either here or in the latter chapter on Bug reviewing/reporting)
+
+## Schema / Schematic diagram
+
+
+
+## How to contribute to this guide itself? {#how-to-contribute-to-this-guide -}
 
 This guide is built using bookdown which makes editing it easier, provided you have a GitHub account (sign-up at [github.com](https://github.com/)). After you log-in to GitHub, click on the ‘Edit’ icon highlighted with a red ellipse in the image below. This will take you to an editable version of the the source R Markdown file that generated the page you are on:
 
@@ -11,5 +22,4 @@ This guide is built using bookdown which makes editing it easier, provided you h
 Use the [issue tracker](https://github.com/forwards/rdevguide/issues) to raise an issue about the guide’s content or to make a feature request.
 
 Maintainers and contributors are requested to follow this project's [code of conduct](https://github.com/forwards/rdevguide/blob/master/CONDUCT.md).
-
 
