--- a/08-translations.Rmd
+++ b/08-translations.Rmd
@@ -1,8 +1,10 @@
 # Translations
 
-This chapter covers internationalization in R, i.e., the display of messages in languages other than English. All output in R (such as messages emitted by `stop()`, `warning()`, or `message()`) is eligible for translation, as are menu labels in the GUI. Depending on the version of R that you are using, some of the languages might already be available while others may need work.
-R leverages the [`gettext`](https://www.gnu.org/software/gettext/) program to handle the conversion from English
-to arbitrary target languages.
+This chapter covers internationalization in R, i.e., the display of messages in languages other than English. All
+output in R (such as messages emitted by `stop()`, `warning()`, or `message()`) is eligible for translation, as
+are menu labels in the GUI. Depending on the version of R that you are using, some of the languages might already
+be available while others may need work. R leverages the [`gettext`](https://www.gnu.org/software/gettext/) program
+to handle the conversion from English to arbitrary target languages.
 
 Having messages available in other languages can be an important bridge for R learners not confident in English --
 rather than learning two things at once (coding in R and processing diagnostic information in English), they can
