--- a/08-translations.Rmd
+++ b/08-translations.Rmd
@@ -11,9 +11,9 @@ rather than learning two things at once (coding in R and processing diagnostic i
 focus on coding while getting more natural errors/warnings in their native tongue.
 
 The [`gettext` manual](https://www.gnu.org/software/gettext/manual/index.html) is a more canonical reference for
-deep understanding of how `gettext` works. This chapter will just give a broad overview of how it works, with
-particular focus on how things work for R, with the goal of making it as low-friction as possible for developers
-and users to contribute new/updated translations.
+deep understanding of how `gettext` works. This chapter will just give a broad overview, with particular focus on
+how things work for R, with the goal of making it as low-friction as possible for developers and users to contribute
+new/updated translations.
 
 ## How translations work
 
@@ -52,6 +52,93 @@ completeness and edification.
 
 ### .po files
 
+.po files are the most important artifacts for translators. They provide the (human-readable!) mapping between
+the messages as they appear in the source code and how the messages will appear to users in translated locales.
+
+#### Singular messages
+
+Most messages appear as `msgid`/`msgstr` pairs. The former gives the message at it appears in the code, while the
+latter shows how it should appear in translation. For example, here is an error in German (locale: `de`) informing
+the user that their input must be of class `POSIXt`
+([source](https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-de.po#L537-L538)):
+
+```
+msgid "'to' must be a \"POSIXt\" object"
+msgstr "'to' muss ein \"POSIXt\" Objekt sein"
+```
+
+The same message can also be found in
+[`R-it.po`](https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-it.po#L532-L533)
+giving the translation to Italian:
+
+```
+msgid "'to' must be a \"POSIXt\" object"
+msgstr "'to' dev'essere un oggetto \"POSIXt\""
+```
+
+#### Plural messages
+
+Some messages will have different translations depending on some input determined at run time (e.g., the `length()` of
+an input object or the `nrow()` of a `data.frame`). This presents a challenge for translation, because different languages
+have different rules for how to pluralize different ordinal
+numbers[^See the [relevant section](https://www.gnu.org/software/gettext/manual/html_node/Plural-forms.html) of the `gettext` manual].
+For example, English typically adds `s` to any quantity of items besides 1 (1 dog, 2 dog`s`, 100 dog`s`, even 0 dog`s`).
+Chinese typically does not alter the word itself in similar situations (一只狗, 两只狗, 一百只狗, 零只狗); Arabic has _six_
+different ways to pluralize a quantity.
+
+In .po files, this shows up in the form of `msgid_plural` entries, followed by several ordered `msgstr` entries. Here's an example from
+[`R-de.po`](https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-de.po#L2015-L2018):
+
+```
+msgid "Warning message:\n"
+msgid_plural "Warning messages:\n"
+msgstr[0] "Warnmeldung:\n"
+msgstr[1] "Warnmeldungen:\n"
+```
+
+The two entries in English correspond to the singular and plural messages; the two entries in German correspond similarly, because
+pluralization rules in German are similar to those in English. The situation in Lithuanian
+([`R-lt.po`](https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-lt.po#L1999-L2003))
+is more divergent:
+
+```
+msgid "Warning message:\n"
+msgid_plural "Warning messages:\n"
+msgstr[0] "Įspėjantis pranešimas:\n"
+msgstr[1] "Įspėjantys pranešimai:\n"
+msgstr[2] "Įspėjančių pranešimų:\n"
+```
+
+This corresponds to the 3 different ways to pluralize words in Polish.
+
+What do `0`, `1`, and `2` correspond to, exactly? Ideally, this will be clear to native speakers of the language, but for
+clarity, it is the solution to a small arithmetic problem that can be found in the language's metadata entry. Look for the
+`Plural-Forms` entry in the metadata at the top of the .po file;
+[here it is for Lithuanian](https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-lt.po#L18-L19):
+
+```
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
+```
+
+`nplurals` tells us how many entries correspond to each `msgid_plural` for this language. `plural` tells us, for the
+quantity `n`, which entry to use. The arithmetic is C code; most important if you really want to parse this and are only
+familiar with R code is C's [ternary operator](https://en.wikipedia.org/wiki/%3F:): `test ? valueIfTrue : valueIfFalse`
+is a handy way to write R's `if (test) valueIfTrue else valueIfFalse`.
+
+Parsing, we get the following associations:
+
+ - the `0` entry corresponds to when a number equals 1 modulo 10 (i.e., 1, 11, 21, 31, ...) _except_ numbers equaling
+   11 modulo 100 (i.e., 11, 111, 211, 311, ...). Combining, that's 1, 21, 31, ..., 91, 101, 121, 131, ..., 191, ...
+ - the `1` entry corresponds to numbers at least 2 modulo 10 (2, 3, ..., 8, 9, 12, 13, 14, ...) and _either_
+   below 10 modulo 100 (0, 1, ..., 9, 100, 101, ..., 109, ...) _or_ exceeding 20 modulo 100 (21, 22, ..., 99). Combining,
+   that's 2, 3, ..., 9, 22, 23, ..., 29, 32, 33, ... 39, ..., 102, 103, ..., 109, 122, 123, ...
+ - The `2` entry corresponds to all other numbers, i.e. 0, 10, 11, 12, ..., 19, 20, 30, ..., 90, 100, 110, 111, 112, ...
+
+TODO(michaelchirico): How to discover a new `nplurals/plural`.
+TODO(michaelchirico): sprintf templates (`%s`) and redirections (`%1$s`)
+TODO(michaelchirico): fuzzy translations
+
 ### .mo files
 
 .po files are plain text, but while helpful for human readers, this is inefficient for consumption by computers.
@@ -62,7 +149,7 @@ They are stored in the R sources at `./src/library/translations/inst` in various
 
 ## How to contribute new translations
 
-Creating and editing .po files, testing the translations worked, **encoding**, translation teams, release schedule
+TODO(michaelchirico): Creating and editing .po files, testing the translations worked, **encoding**, translation teams, release schedule
 
 ## Current status of translations in R
 
